--- a/index.html
+++ b/index.html
@@ -1212,9 +1212,10 @@
 	HTML
 </a>
     <a class="UnderlineNav-item " data-hydro-click="{&quot;event_type&quot;:&quot;user_profile.click&quot;,&quot;payload&quot;:{&quot;profile_user_id&quot;:54195182,&quot;target&quot;:&quot;TAB_JAVASCRIPT&quot;,&quot;user_id&quot;:54195182,&quot;originating_url&quot;:&quot;<a href= " https://github.com/QiaoweidE/Github/tree/main/HTML-html " >&quot;}}" data-hydro-click-hmac="d00b4c3f27e1885d6b395218ff2fb5ffa2311eaff015108bba1ccc9ae0cfad93" href="/QiaoweidE?tab=JAVASCRIPT">
-      <svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true"><path fill-rule="evenodd" d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z"></path></svg>
-      JAVASCRIPT
-      </a>
+      <svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden=<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://qiaoweide.github.io/cydia/" role="button" id="open_cydia">
+					<img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/>
+	JAVASCRIPT
+</a>
     <a class="UnderlineNav-item " data-hydro-click="{&quot;event_type&quot;:&quot;user_profile.click&quot;,&quot;payload&quot;:{&quot;profile_user_id&quot;:54195182,&quot;target&quot;:&quot;TAB_CODE&quot;,&quot;user_id&quot;:54195182,&quot;originating_url&quot;:&quot;https://github.com/QiaoweidE/Github/tree/main/Code&quot;}}" data-hydro-click-hmac="0396d42ee907a0711fa12093c308474c4d99b7a0b35ef9d18bcbc45b5bdf7711" href="/QiaoweidE?tab=CODE">
       <svg class="octicon octicon-project UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true"><path fill-rule="evenodd" d="M1.75 0A1.75 1.75 0 000 1.75v12.5C0 15.216.784 16 1.75 16h12.5A1.75 1.75 0 0016 14.25V1.75A1.75 1.75 0 0014.25 0H1.75zM1.5 1.75a.25.25 0 01.25-.25h12.5a.25.25 0 01.25.25v12.5a.25.25 0 01-.25.25H1.75a.25.25 0 01-.25-.25V1.75zM11.75 3a.75.75 0 00-.75.75v7.5a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75zm-8.25.75a.75.75 0 011.5 0v5.5a.75.75 0 01-1.5 0v-5.5zM8 3a.75.75 0 00-.75.75v3.5a.75.75 0 001.5 0v-3.5A.75.75 0 008 3z"></path></svg>
       CODE
